-- Weight Training Workout Tracker — minimal schema
-- PostgreSQL 14+
--
-- Apply with:
--   make db-up && make schema-minimal
--   ./scripts/apply-schema.sh minimal [--seed]
--
-- Idempotent: drops and recreates objects in dependency order.

DROP TABLE IF EXISTS workout_sets CASCADE;
DROP TABLE IF EXISTS workouts CASCADE;
DROP TABLE IF EXISTS sessions CASCADE;
DROP TABLE IF EXISTS workout_types CASCADE;
DROP TABLE IF EXISTS users CASCADE;
DROP FUNCTION IF EXISTS update_updated_at_column() CASCADE;
DROP FUNCTION IF EXISTS normalize_user_email() CASCADE;

-- ---------------------------------------------------------------------------
-- users
-- ---------------------------------------------------------------------------
CREATE TABLE users (
    user_id         BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name            VARCHAR(255) NOT NULL,
    email           VARCHAR(255) NOT NULL,
    password_hash   VARCHAR(255) NOT NULL,
    created_at      TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at      TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT users_name_not_blank CHECK (length(trim(name)) > 0),
    CONSTRAINT users_email_format CHECK (position('@' IN email) > 1)
);

CREATE UNIQUE INDEX idx_users_email_unique ON users (email);

COMMENT ON TABLE users IS 'Registered accounts. password_hash stores a bcrypt (or Argon2) hash, never plaintext.';
COMMENT ON COLUMN users.email IS 'Stored lowercase and trimmed by trigger.';

-- ---------------------------------------------------------------------------
-- workout_types (system defaults + user custom exercises)
-- ---------------------------------------------------------------------------
CREATE TABLE workout_types (
    workout_type_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id         BIGINT REFERENCES users(user_id) ON DELETE CASCADE,
    name            VARCHAR(255) NOT NULL,
    description     TEXT,
    created_at      TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at      TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT workout_types_name_not_blank CHECK (length(trim(name)) > 0)
);

-- Ensure system catalog names are unique (user_id IS NULL)
CREATE UNIQUE INDEX idx_workout_types_system_name ON workout_types (lower(trim(name))) WHERE user_id IS NULL;
-- Ensure personal custom exercise names are unique per user
CREATE UNIQUE INDEX idx_workout_types_user_name ON workout_types (user_id, lower(trim(name))) WHERE user_id IS NOT NULL;
CREATE INDEX idx_workout_types_user ON workout_types (user_id) WHERE user_id IS NOT NULL;

COMMENT ON TABLE workout_types IS 'Exercise catalog. user_id NULL denotes global system default; non-null denotes user-specific custom exercise.';

-- ---------------------------------------------------------------------------
-- sessions
-- ---------------------------------------------------------------------------
CREATE TABLE sessions (
    session_id  BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id     BIGINT NOT NULL REFERENCES users(user_id) ON DELETE CASCADE,
    started_at  TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    ended_at    TIMESTAMPTZ,
    notes       TEXT,
    created_at  TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at  TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT sessions_ended_after_started CHECK (ended_at IS NULL OR ended_at >= started_at)
);

COMMENT ON TABLE sessions IS 'One gym visit / training session for a user.';
COMMENT ON COLUMN sessions.started_at IS 'When the session began (date and time, timezone-aware).';
COMMENT ON COLUMN sessions.ended_at IS 'When the session concluded. NULL represents an in-progress session.';

-- ---------------------------------------------------------------------------
-- workouts (an exercise performed in a session)
-- ---------------------------------------------------------------------------
CREATE TABLE workouts (
    workout_id      BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    session_id      BIGINT NOT NULL REFERENCES sessions(session_id) ON DELETE CASCADE,
    workout_type_id BIGINT NOT NULL REFERENCES workout_types(workout_type_id) ON DELETE RESTRICT,
    display_order   INTEGER NOT NULL DEFAULT 0,
    notes           TEXT,
    created_at      TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at      TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT workouts_display_order_nonneg CHECK (display_order >= 0)
);

COMMENT ON TABLE workouts IS 'One exercise block in a session. Load lives on workout_sets, not here.';
COMMENT ON COLUMN workouts.display_order IS 'Order of the exercise in the session (0-based).';

-- ---------------------------------------------------------------------------
-- workout_sets (one row per set)
-- ---------------------------------------------------------------------------
CREATE TABLE workout_sets (
    workout_set_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    workout_id     BIGINT NOT NULL REFERENCES workouts(workout_id) ON DELETE CASCADE,
    set_number     INTEGER NOT NULL,
    reps           INTEGER NOT NULL,
    weight         NUMERIC(8,2),
    weight_unit    VARCHAR(10) NOT NULL DEFAULT 'kg',
    is_warmup      BOOLEAN NOT NULL DEFAULT FALSE,
    created_at     TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at     TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT workout_sets_set_number_positive CHECK (set_number > 0),
    CONSTRAINT workout_sets_reps_positive CHECK (reps > 0),
    CONSTRAINT workout_sets_weight_nonneg CHECK (weight IS NULL OR weight >= 0),
    CONSTRAINT workout_sets_weight_unit CHECK (weight_unit IN ('kg', 'lbs')),
    CONSTRAINT workout_sets_unique_number UNIQUE (workout_id, set_number)
);

COMMENT ON TABLE workout_sets IS 'Individual sets. Different weight/reps per set are allowed (pyramid, drop sets, backoff).';
COMMENT ON COLUMN workout_sets.weight IS 'NULL means bodyweight (no added load). 0 is allowed for the same meaning.';
COMMENT ON COLUMN workout_sets.is_warmup IS 'True if set is a warm-up; excluded from working volume and PR statistics.';

-- ---------------------------------------------------------------------------
-- indexes
-- ---------------------------------------------------------------------------
-- Composite index for listing user sessions newest first (supports pagination)
CREATE INDEX idx_sessions_user_started ON sessions (user_id, started_at DESC);

-- Order exercises within a session
CREATE INDEX idx_workouts_session_order ON workouts (session_id, display_order);

-- FK index for exercise lookups and restrict verification
CREATE INDEX idx_workouts_type ON workouts (workout_type_id);

-- Note: No separate index on workout_sets(workout_id) is created because the
-- UNIQUE constraint workout_sets_unique_number on (workout_id, set_number)
-- already provides a B-Tree index with workout_id as its leading column.

-- ---------------------------------------------------------------------------
-- triggers
-- ---------------------------------------------------------------------------
CREATE OR REPLACE FUNCTION update_updated_at_column()
RETURNS TRIGGER AS $$
BEGIN
    NEW.updated_at = CURRENT_TIMESTAMP;
    RETURN NEW;
END;
$$ LANGUAGE plpgsql;

CREATE OR REPLACE FUNCTION normalize_user_email()
RETURNS TRIGGER AS $$
BEGIN
    NEW.email = lower(trim(NEW.email));
    RETURN NEW;
END;
$$ LANGUAGE plpgsql;

CREATE TRIGGER trg_users_updated_at
    BEFORE UPDATE ON users
    FOR EACH ROW EXECUTE FUNCTION update_updated_at_column();

CREATE TRIGGER trg_users_normalize_email
    BEFORE INSERT OR UPDATE ON users
    FOR EACH ROW EXECUTE FUNCTION normalize_user_email();

CREATE TRIGGER trg_workout_types_updated_at
    BEFORE UPDATE ON workout_types
    FOR EACH ROW EXECUTE FUNCTION update_updated_at_column();

CREATE TRIGGER trg_sessions_updated_at
    BEFORE UPDATE ON sessions
    FOR EACH ROW EXECUTE FUNCTION update_updated_at_column();

CREATE TRIGGER trg_workouts_updated_at
    BEFORE UPDATE ON workouts
    FOR EACH ROW EXECUTE FUNCTION update_updated_at_column();

CREATE TRIGGER trg_workout_sets_updated_at
    BEFORE UPDATE ON workout_sets
    FOR EACH ROW EXECUTE FUNCTION update_updated_at_column();
